--- a/.github/workflows/master_clientt1.yml
+++ b/.github/workflows/master_clientt1.yml
@@ -11,41 +11,48 @@ on:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Log in to registry
-      uses: docker/login-action@v1
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_51b521c9ca5247de814f9dce1446644f }}
+      - name: Log in to registry
+        uses: docker/login-action@v1
+        with:
+          registry: https://index.docker.io/v1/
+          username: ${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_51b521c9ca5247de814f9dce1446644f }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}/clientt1:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}/clientt1:${{ github.sha }}
+          file: ./Dockerfile
+
+  test:
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run Jest tests
+      run: npm test
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'clientt1'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_ddccadef6c294972bddd2f209cf25427 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}/clientt1:${{ github.sha }}'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "clientt1"
+          slot-name: "production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_ddccadef6c294972bddd2f209cf25427 }}
+          images: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}/clientt1:${{ github.sha }}"
