--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --testTimeout 10000",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "jest": "^27.5.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   },
