--- a/.github/workflows/master_clientt1.yml
+++ b/.github/workflows/master_clientt1.yml
@@ -33,6 +33,15 @@ jobs:
           tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00cf81f07c564533ab7d2372aefbfd8d }}/clientt1:${{ github.sha }}
           file: ./Dockerfile
 
+  Jest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run Tests
+        run: |
+          npm install 
+          npm test
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
