--- a/.github/workflows/master_clientt1.yml
+++ b/.github/workflows/master_clientt1.yml
@@ -35,6 +35,7 @@ jobs:
 
   Jest:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v1
       - name: Run Tests
@@ -44,7 +45,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, jest]
     environment:
       name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
