--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -8,6 +8,9 @@ http {
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
+        location /{
+            try_files $uri /index.html;
+        }
         location /appui {
             try_files $uri /index.html;
         }
