--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "jest": "^27.5.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
