--- a/.github/workflows/master_gigwork-client.yml
+++ b/.github/workflows/master_gigwork-client.yml
@@ -11,41 +11,43 @@ on:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_c7a55fe0e468430ab4a8cc5a5bb44360 }}
+      - name: Log in to registry
+        uses: docker/login-action@v2
+        with:
+          registry: https://index.docker.io/v1/
+          username: ${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_c7a55fe0e468430ab4a8cc5a5bb44360 }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}/gigwork_client:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}/gigwork_client:${{ github.sha }}
+          file: ./Dockerfile
+          build-args: |
+            REACT_APP_SERVER_URL=${{vars.REACT_APP_SERVER_URL}}
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'gigwork-client'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_4d33f67c79d54a17a878d58038ef67af }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}/gigwork_client:${{ github.sha }}'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "gigwork-client"
+          slot-name: "production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_4d33f67c79d54a17a878d58038ef67af }}
+          images: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_1ca82653566f4f539badd4f371c0b420 }}/gigwork_client:${{ github.sha }}"
