add chat online status

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "child_process": "^1.0.2",
     "framer-motion": "^7.10.3",
     "fs": "^0.0.1-security",
+    "javascript-time-ago": "^2.5.9",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
+    "react-time-ago": "^7.2.1",
     "redux": "^4.2.0",
     "socket.io-client": "^4.6.1",
     "uniqid": "^5.4.0",
